ramped/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 2
  strategy:
    type: RollingUpdate #troca gradativa
    rollingUpdate:
      maxSurge: 1 # quantos pods posso criar a mais, ou seja, tenho 10 antigos, crio 1 novo, esta ok, mato o antigo, e repito com os outros 9 antigos, quanto maior mais rapido atualizo tudo
      maxUnavailable: 0 #quantos posso matar da versao antiga de uma vez
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: kubedevio/api-versao:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: NodePort
  selector:
    app: green
  ports:
  - port: 8080
    targetPort: 8080
