ramped/ingress-host.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
    - host: api.aula.kubedev.io
      http:
        paths:
          - backend:
              serviceName: green-service
              servicePort: 80
